--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyDaSYzAngJ-rWF8x3ee40B36HYb21rS03A</string>
+	<string>Google Api Key</string>
 	<key>GCM_SENDER_ID</key>
 	<string>105449197265</string>
 	<key>PLIST_VERSION</key>
